--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ section {
     width: 1000px;
     display: flex;
     justify-content: space-between; 
-    padding: 50px 0 50px 0;
+    padding: 50px 0;
 }
 
 .section-container-content {
