fix: refatoring the code

--- a/css/index.css
+++ b/css/index.css
@@ -1,104 +1,68 @@
 :root {
-    --color-secundary: #0D99FF;
-}
-
-body {
-    font-family: 'Segoe UI';
+    --primary-color: #0D99FF;
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
     width: 100%;
-    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.header-container {
+.header-in {
     width: 1000px;
+    max-width: 1000px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.logo {
-    font-size: 15pt;
-    font-weight: bold;
+.header-in > nav > ul {
+  list-style: none;
+  display: flex;
 }
 
-ul {
-    display: flex;
-    align-items: center;
-    list-style-type: none;
+.header-in > nav > ul > li {
+  margin: 15px;
+  cursor: pointer;
+  transition: all .3s;
 }
 
-li {
-    font-size: 12pt;
-    margin: 10px;
-    cursor: pointer;
-    transition-duration: .3s;
+.header-in > nav > ul > li:hover {
+  color: var(--primary-color);
 }
 
-li:hover {
-    color: var(--color-secundary);
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-section {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.section-container {
-    width: 1000px;
-    display: flex;
-    justify-content: space-between; 
-    padding: 50px 0;
-}
-
-.section-container-content {
-    width: 448px;
-    height: 310px;
-    margin-right: 20px;
-}
-
-.paragraph-main {
-    max-width: 250px;
-    font-size: 20pt;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.paragraph-secundary {
-    max-width: 270px;
-    font-size: 12pt;
-    margin-bottom: 50px;
-}
-
-button {
-    width: 120px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    font-size: 12pt;
-    padding: 10px;
-    color: #FFFFFF;
-    background-color: var(--color-secundary);
+.banner-in {
+  width: 1000px;
+  max-width: 1000px;
+  padding: 30px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .image-container {
-    width: 448px;
-    height: 310px;
-    border: 5px solid #000000;
+  width: 448px;
+  height: 310px;
+  border: 5px solid black;
 }
 
 img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
