--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: #0D99FF;
+    --secondary-color: #0089ec;
 }
 
 * {
@@ -9,7 +10,7 @@
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
@@ -25,6 +26,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 80px;
 }
 
 .header-in > nav > ul {
@@ -51,14 +53,45 @@ header {
 .banner-in {
   width: 1000px;
   max-width: 1000px;
-  padding: 30px 0;
+  padding: 50px 0 20px 0;
   display: flex;
   justify-content: space-between;
 }
 
+.left-side {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.left-side > h2 {
+  width: 250px;
+}
+
+.left-side > p {
+  width: 300px;
+  margin: 20px 0 50px 0;
+}
+
+.left-side > button {
+  padding: 10px;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  cursor: pointer;
+  transition: all .3s;
+  font-size: 12pt;
+}
+
+.left-side > button:hover {
+  background-color: var(--secondary-color);
+}
+
 .image-container {
-  width: 448px;
-  height: 310px;
+  width: 548px;
+  height: 370px;
   border: 5px solid black;
 }
 
