--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
@@ -37,7 +37,6 @@ header {
 .header-in > nav > ul > li {
   margin: 15px;
   cursor: pointer;
-  transition: all .3s;
 }
 
 .header-in > nav > ul > li:hover {
@@ -79,10 +78,11 @@ header {
   color: #fff;
   border: none;
   border-radius: 5px;
-  width: 100px;
+  width: 110px;
   cursor: pointer;
   transition: all .3s;
   font-size: 12pt;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .left-side > button:hover {
