--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #0D99FF;
-    --secondary-color: #0089ec;
+    --primary-color: #0d5eff;
+    --secondary-color: #0d5eff;
 }
 
 * {
